--- a/base/index.html
+++ b/base/index.html
@@ -1,22 +1,29 @@
 <!-- 본 파일은 절대로 수정하지 않습니다. -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="아름다운 여행 사진들을 모아놓은 인터랙티브 갤러리입니다." />
     <title>여행 사진 갤러리 사이트 구축하기</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <header>
+    <header role="banner">
       <h1>여행 사진 갤러리</h1>
-      <form id="search-form">
-        <input type="text" placeholder="이미지 검색" />
-        <button type="submit">검색</button>
+      <form id="search-form" role="search" aria-label="이미지 검색">
+        <input 
+          type="text" 
+          placeholder="이미지 검색" 
+          aria-label="검색어 입력"
+          aria-describedby="search-help" 
+        />
+        <button type="submit" aria-label="검색 실행">검색</button>
+        <div id="search-help" class="sr-only">이미지 제목 또는 설명으로 검색할 수 있습니다. 여러 단어는 공백으로 구분하세요.</div>
       </form>
     </header>
-    <main>
-      <div id="imageContainer"></div>
+    <main role="main">
+      <div id="imageContainer" role="region" aria-label="여행 사진 갤러리" aria-live="polite"></div>
     </main>
     <script src="./script.js"></script>
   </body>
